Fixing vertical align again.

--- a/webroot/css/li3.bot.css
+++ b/webroot/css/li3.bot.css
@@ -18,6 +18,7 @@ table.messages {
 	width: auto;
 }
 .messages {
+	vertical-align: top;
 	font-family: Monaco, Courier, monospace;
 	font-size: 12px;
 }
@@ -33,9 +34,6 @@ table.messages {
 }
 .messages .user:after {
 	content: '>';
-}
-.message td {
-	vertical-align: top;
 }
 
 ul.channels {
